changed add contact endpoint
