# swagger-output.json
@@ -30,9 +30,7 @@
             "description": "OK"
           }
         }
-      }
-    },
-    "/addcontact": {
+      },
       "post": {
         "description": "",
         "parameters": [
